force-app/main/default/objects/App_Good__c/App_Good__c.object-meta.xml
<CustomObject>
    <label>App-Good</label>
    <nameField>
        <displayFormat>AG-{000000}</displayFormat>
        <label>App-Good Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App-Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>