force-app/main/default/objects/App_Good__c/fields/Anxiety_Disorder_including_PTSD__c.field-meta.xml
<CustomField>
    <fullName>Anxiety_Disorder_including_PTSD__c</fullName>
    <formula>IF(INCLUDES(App_Good_Indications__c , &quot;Anxiety Disorder including PTSD&quot;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anxiety Disorder including PTSD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>