force-app/main/default/objects/App_Good__c/fields/Anxiety_PSD__c.field-meta.xml
<CustomField>
    <fullName>Anxiety_PSD__c</fullName>
    <formula>IF(includes( App_Good_Indications__c,&quot;Anxiety Disorder including PTSD&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anxiety / PSD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>