force-app/main/default/objects/App_Good__c/fields/App_Good_Indications__c.field-meta.xml
<CustomField>
    <fullName>App_Good_Indications__c</fullName>
    <label>App Good Indications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neuropathic Pain</fullName>
            </value>
            <value>
                <fullName>Cancer Related Pain</fullName>
            </value>
            <value>
                <fullName>Chemotherapy induced nausea &amp; Vomiting (CINV)</fullName>
            </value>
            <value>
                <fullName>Anxiety Disorder including PTSD</fullName>
            </value>
            <value>
                <fullName>Autism / ASD</fullName>
            </value>
            <value>
                <fullName>Insomnia</fullName>
            </value>
            <value>
                <fullName>Parkinsons</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>