force-app/main/default/objects/App_Good__c/fields/App_Good_Indications_Description__c.field-meta.xml
<CustomField>
    <fullName>App_Good_Indications_Description__c</fullName>
    <label>App Good Indications Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>