force-app/main/default/objects/App_Good__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>App-Goods</relationshipLabel>
    <relationshipName>App_Goods</relationshipName>
    <type>Lookup</type>
</CustomField>