force-app/main/default/objects/App_Good__c/fields/Approved_Good_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Approved_Good_Alternative__c</fullName>
    <description>Is there an approved good for the same indication as what you applying to use the unapproved good for?</description>
    <inlineHelpText>Is there an approved good for the same indication as what you applying to use the unapproved good for?</inlineHelpText>
    <label>Approved Good Alternative?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>