force-app/main/default/objects/App_Good__c/fields/Approved_In_Other_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Approved_In_Other_Jurisdiction__c</fullName>
    <label>Approved In Other Jurisdiction?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>