force-app/main/default/objects/App_Good__c/fields/Approved_Treatments_Available__c.field-meta.xml
<CustomField>
    <fullName>Approved_Treatments_Available__c</fullName>
    <label>Approved Treatments Available</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>