force-app/main/default/objects/App_Good__c/fields/ASD__c.field-meta.xml
<CustomField>
    <fullName>ASD__c</fullName>
    <formula>IF(INCLUDES(App_Good_Indications__c , &quot;Autism / ASD&quot;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>