force-app/main/default/objects/App_Good__c/fields/Cancer__c.field-meta.xml
<CustomField>
    <fullName>Cancer__c</fullName>
    <formula>IF(INCLUDES( App_Good_Indications__c , &quot;Cancer Related Pain&quot;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>