force-app/main/default/objects/App_Good__c/fields/Chemotherapy__c.field-meta.xml
<CustomField>
    <fullName>Chemotherapy__c</fullName>
    <formula>IF(INCLUDES( App_Good_Indications__c , &quot;Chemotherapy induced nausea &amp; Vomiting (CINV)&quot;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chemotherapy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>