force-app/main/default/objects/App_Good__c/fields/Clinical_Justification__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Justification__c</fullName>
    <description>Clinical justification for using the unapproved good. This should address expected benefits of the proposed medicine versus its potential risks, including evidence1 of:
- the unapproved good’s suitability for the intended indication
- the unapproved good’s efficacy and expected benefits
- any unknown or expected adverse effects, risks and safety issues
- related toxicology</description>
    <inlineHelpText>Clinical justification for using the unapproved good. This should address expected benefits of the proposed medicine versus its potential risks</inlineHelpText>
    <label>Clinical Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>