force-app/main/default/objects/App_Good__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>