force-app/main/default/objects/App_Good__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName>
    <label>Dosage Form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>