force-app/main/default/objects/App_Good__c/fields/Dosage_Range__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Range__c</fullName>
    <label>Dosage Range</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>