force-app/main/default/objects/App_Good__c/fields/Expected_Duration_Of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration_Of_Treatment__c</fullName>
    <label>Expected Duration Of Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>