force-app/main/default/objects/App_Good__c/fields/Good__c.field-meta.xml
<CustomField>
    <fullName>Good__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Good</label>
    <referenceTo>Good__c</referenceTo>
    <relationshipLabel>App-Goods</relationshipLabel>
    <relationshipName>App_Goods</relationshipName>
    <type>Lookup</type>
</CustomField>