force-app/main/default/objects/App_Good__c/fields/Insomnia__c.field-meta.xml
<CustomField>
    <fullName>Insomnia__c</fullName>
    <formula>IF(Includes( App_Good_Indications__c,&quot;Insomnia&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insomnia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>