force-app/main/default/objects/App_Good__c/fields/Justification_Not_Using_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Justification_Not_Using_Alternative__c</fullName>
    <description>Why is the approved good inappropriate or unsuitable for use?
Why is the proposed unapproved good a more appropriate option than an approved available alternative?</description>
    <inlineHelpText>Why is the approved good inappropriate or unsuitable for use?
Why is the proposed unapproved good a more appropriate option than an approved available alternative?</inlineHelpText>
    <label>Justification Not Using Alternative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>