force-app/main/default/objects/App_Good__c/fields/Neuropathic_Pain__c.field-meta.xml
<CustomField>
    <fullName>Neuropathic_Pain__c</fullName>
    <formula>IF(INCLUDES(App_Good_Indications__c , &quot;Neuropathic Pain&quot;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Neuropathic Pain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>