force-app/main/default/objects/App_Good__c/fields/Other_Indications__c.field-meta.xml
<CustomField>
    <fullName>Other_Indications__c</fullName>
    <formula>if(Includes
( App_Good_Indications__c,&quot;Other&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Indications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>