force-app/main/default/objects/App_Good__c/fields/Parkinsons__c.field-meta.xml
<CustomField>
    <fullName>Parkinsons__c</fullName>
    <formula>IF(INCLUDES( App_Good_Indications__c , &quot;Parkinsons&quot;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parkinsons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>