force-app/main/default/objects/App_Good__c/fields/Patient_Class__c.field-meta.xml
<CustomField>
    <fullName>Patient_Class__c</fullName>
    <label>Patient Class</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>