force-app/main/default/objects/App_Good__c/fields/Product_Company__c.field-meta.xml
<CustomField>
    <fullName>Product_Company__c</fullName>
    <label>Product Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>