force-app/main/default/objects/App_Good__c/fields/Product_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Trade_Name__c</fullName>
    <label>Product Trade Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>