force-app/main/default/objects/App_Good__c/fields/Seriousness__c.field-meta.xml
<CustomField>
    <fullName>Seriousness__c</fullName>
    <label>Seriousness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>