force-app/main/default/objects/App_Good__c/fields/Tried_Will_Try_Approved_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Tried_Will_Try_Approved_Alternative__c</fullName>
    <label>Tried/Will Try Approved Alternative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>